<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myDrawerLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myConstraintLayout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/helpActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/preferencesActivityButton"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TextView
        android:id="@+id/accountLabel"
        android:layout_width="221dp"
        android:layout_height="38dp"
        android:layout_marginTop="40dp"
        android:background="@color/button_background_green"
        android:text="@string/bank_accounts"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/preferencesActivityButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Preferences"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.199" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="331dp"
        android:layout_height="274dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="47dp">

            <TextView
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_column="2"
                android:text="@string/checking"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id = "@+id/checking_Balance"
                android:layout_width="196dp"
                android:layout_height="33dp"
                android:layout_column="3"
                android:text="@string/account_balance"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="50sp">

            <TextView
                android:layout_width="116dp"
                android:layout_height="30dp"
                android:layout_column="2"
                android:text="@string/savings"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id = "@+id/savings_Balance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:text="@string/Account_balance"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_marginTop="50sp">


            <TextView
                android:layout_height="match_parent"
                android:layout_column="2"
                android:text="@string/Credit"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

            <TextView
                android:id = "@+id/credit_Balance"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_column="3"
                android:text="@string/available_credit"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="20sp" />

        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>

<com.google.android.material.navigation.NavigationView
    android:id="@+id/myDrawerView"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    android:clipToPadding="false"
    app:headerLayout="@layout/my_drawer_header"
    app:menu="@menu/my_drawer_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

</androidx.drawerlayout.widget.DrawerLayout>