<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="355dp" />

    <View
        android:id="@+id/viewDivider"
        android:layout_width="1dp"
        android:layout_height="744dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="208dp"
        android:layout_height="744dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:text="@string/forcasting"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:text="@string/account_page"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:text="@string/preferences"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:text="@string/deposit_and_withdrawl"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:text="@string/about_this_app"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="124dp"
                android:text="@string/authors"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="207dp"
        android:layout_height="744dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/viewDivider"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/editTextTextMultiLine"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus accumsan risus non diam auctor gravida. Nullam aliquam rhoncus sem eget gravida. Nunc at dui ultricies, efficitur felis sit amet, interdum dolor. Nulla facilisi. Morbi erat lorem, consequat a mauris quis, maximus efficitur orci. Maecenas non mauris tempus, vehicula erat et, rhoncus nisl. Donec tincidunt ut sem non pharetra. Ut et purus malesuada, ullamcorper enim sagittis, efficitur libero. Cras consequat velit eu auctor iaculis. Vestibulum vitae metus eget nisl imperdiet euismod. Vestibulum sit amet odio sit amet mi fringilla venenatis id ut orci. Mauris leo sapien, imperdiet sodales elementum semper, tempus ut mi. Aliquam efficitur cursus justo, id molestie sem pulvinar ut. Fusce dictum libero vitae eros lacinia ullamcorper. Cras interdum purus metus, sit amet rhoncus massa rhoncus ut."
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />
        </ScrollView>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>